erreurs.txt
PS E:\AAS\Devis\Vente\Camira\projet CACES\plateforme sur github\CACESmodule> npm run dev

> easycertif@0.0.0 dev
> vite

vite v5.4.19 building for development...

watching for file changes...
vite v5.4.19 building for development...

watching for file changes...
vite v5.4.19 building for development...

watching for file changes...
vite v5.4.19 building for development...

watching for file changes...
vite v5.4.19 building for development...

watching for file changes...

  VITE v5.4.19  ready in 675 ms

  ➜  Local:   http://localhost:5173/
  ➜  Network: use --host to expose
  ➜  press h + enter to show help

build started...

build started... (x2)

build started... (x3)

build started... (x4)

build started... (x5)
✓ 1 modules transformed.
✓ 1 modules transformed. (x2)
✓ 2 modules transformed.
dist-electron/electron/preload.cjs  8.13 kB │ gzip: 1.74 kB
dist-electron/electron/preload.cjs  8.14 kB │ gzip: 1.58 kB
built in 1981ms.
✓ 3 modules transformed.
dist-electron/electron/utils/val17PptxGenerator.cjs  78.13 kB │ gzip: 16.20 kB
dist-electron/electron/utils/val17PptxGenerator.cjs  78.82 kB │ gzip: 16.46 kB
built in 2558ms.
✓ 5 modules transformed.
dist-electron/electron/utils/pptxOrchestrator.cjs    10.67 kB │ gzip:  3.01 kB
dist-electron/electron/utils/val17PptxGenerator.cjs  80.97 kB │ gzip: 16.93 kB
dist-electron/electron/utils/pptxOrchestrator.cjs    10.89 kB │ gzip:  3.08 kB
dist-electron/electron/utils/val17PptxGenerator.cjs  75.63 kB │ gzip: 16.61 kB
built in 3068ms.
dist-electron/electron/pptxOrchestrator.cjs   9.20 kB │ gzip:  2.69 kB
dist-electron/electron/ipcHandlers.cjs       65.25 kB │ gzip: 10.19 kB
dist-electron/electron/pptxOrchestrator.cjs   8.08 kB │ gzip:  2.54 kB
dist-electron/electron/ipcHandlers.cjs       66.15 kB │ gzip: 10.27 kB
built in 3199ms.
dist-electron/electron/pptxOrchestrator.cjs    9.20 kB │ gzip:  2.69 kB
dist-electron/electron/index.cjs             104.77 kB │ gzip: 16.05 kB
dist-electron/electron/pptxOrchestrator.cjs   8.08 kB │ gzip:  2.54 kB
dist-electron/electron/index.cjs             98.16 kB │ gzip: 16.15 kB
built in 3493ms.

App threw an error during load
E:\AAS\Devis\Vente\Camira\projet CACES\plateforme sur github\CACESmodule\dist-electron\electron\index.cjs:2352
          const fileBuffer = await fs$1.readFile(filePath);
                             ^^^^^

SyntaxError: await is only valid in async functions and the top level bodies of modules
    at wrapSafe (node:internal/modules/cjs/loader:1669:18)
    at Module._compile (node:internal/modules/cjs/loader:1711:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1904:10)
    at Module.load (node:internal/modules/cjs/loader:1472:32)
    at Module._load (node:internal/modules/cjs/loader:1289:12)
    at c._load (node:electron/js2c/node_init:2:18013)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:242:24)
    at cjsLoader (node:internal/modules/esm/translators:270:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:200:7)
